# FMI-programming-101

./: .clang-format  .gitignore  .gitmodules  autocompile.sh  compile_flags.txt  in.txt  try_compile.sh
10_10_2022/: test.cpp
17_10_2022/: circle.cpp  triugulnik.cpp
20_10_2022/: combinations.cpp  max_number.cpp
5_10_2022/: mirror.cpp  swap.cpp  triangleArea.cpp
homework_1/: problem2.cpp  problem2_dumb.cpp
pusheen_contest/: CMakeLists.txt
pusheen_contest/draw/: sdlwrapper.h
sem_1/17_10_2022/: plochki.cpp  pulove.cpp  termometyr.cpp
sem_1/20_10_2022/: sum_range.cpp
sem_1/24_10_2022/: nums1ton.cpp
sem_1/27_10_2022/: allProblems.cpp
sem_1/homework_1/: problem1.cpp  problem2_adv.cpp
sem_1/pusheen_contest/: main.cpp
sem_1/test_1/: problem3.cpp
sem_1/test_2/: task_1.cpp  task_2.cpp
sem_1/week_12/: flood_fill.cpp  quickSort.cpp
sem_1/week_5/: positive_negative.cpp
sem_1/week_6/: dedup.cpp  dinko_zad4.cpp
sem_1/week_9/: nextPermutation.cpp
sem_2/sdp_dari/: 1_monte_carlo.cpp  1_pascal.cpp  2_3darray.cpp  medicine.cpp
sem_2/week-01/: array.cpp
sem_2/week-08/: main.cpp
sem_2/week-09/: list.cpp  makefile
smg_shkola/: bool_knapsack.cpp  bool_knapsack_2.cpp  gauss.cpp
smg_shkola/crypto/: decoder.cpp  encoder.cpp  message_1_dec.txt  message_1_enc.txt  message_2_dec.txt  message_2_enc.txt  message_2_key.txt  message_3_dec.txt  message_3_enc.txt  message_3_key.txt
test_1/: problem1.cpp  problem2.cpp
test_2/: task_3.cpp
week_10/: dynamicMemory.cpp
week_11/: practice.cpp  problems.cpp
week_12/: crossword.cpp
week_14/: reftest.cpp
week_4/: function_searching.cpp  kmp.cpp
week_5/: merge_sort.cpp  net.cpp  palindrome.cpp  std_sort.cpp  test_generator.cpp
week_6/: removing.cpp
week_9/: nextPermutation.cpp
(+20 files in other folders)
